--- a/src/style.css
+++ b/src/style.css
@@ -63,9 +63,90 @@ footer{
          
 
 
-.total {
-    background-color: red;
+.quantity {
+    background-color: rgba(246, 5, 5, 0.6);
     color: white;
-    border-radius: 50%;
-    padding: 2px;
+    border-radius: 40%;
+    padding: 5px;
+}
+
+
+
+
+.card {
+    padding-top: 4rem;
+    z-index: 100;
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 500px;
+    background-color: #453E3B;
+    height: 100vh;
+    transition: 0.5s;
+}
+
+.card h1 {
+    color: #E8BC0E;
+    font-weight: 100;
+    margin: 0;
+    padding: 0 20px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+}
+.card .checkOut {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+}
+.card .checkOut div {
+    background-color: #E8BC0E;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 0%;
+}
+.card .checkOut div:nth-child(2){
+    background-color: #1C1F25;
+    color: #fff;
+}
+.active .card {
+    left: calc(100% - 500px);
+}
+
+.container button {
+    background-color: #101010;
+    color: #fff;
+    padding: 10px;
+    width: 100%;
+}
+
+.listCard li {
+    display: grid;
+    grid-template-columns: 100px repeat(3,1fr);
+    color: #fff;
+    row-gap: 10px;
+    margin-bottom: 20px;
+}
+.listCard li div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.listCard li img {
+    width: 90%;
+}
+.listCard button {
+    width: auto;
+    background-color: #fff5;
+    border: none;
+}
+.listCard .count {
+    margin: 0 10px;
 }
